// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Loader /> rendering render at firts page correctly 1`] = `
<div
  className="pagination"
>
  Page:
  <div
    className="pagination-item"
  >
    <Link
      to="/1"
    >
      <Button
        status="disabled"
      >
        1
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="/2"
    >
      <Button
        status="normal"
      >
        2
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="/3"
    >
      <Button
        status="normal"
      >
        3
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="/4"
    >
      <Button
        status="normal"
      >
        4
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="/5"
    >
      <Button
        status="normal"
      >
        5
      </Button>
    </Link>
  </div>
</div>
`;

exports[`<Loader /> rendering render at page 2 correctly 1`] = `
<div
  className="pagination"
>
  Page:
  <div
    className="pagination-item"
  >
    <Link
      to="/1"
    >
      <Button
        status="normal"
      >
        1
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="/2"
    >
      <Button
        status="disabled"
      >
        2
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="/3"
    >
      <Button
        status="normal"
      >
        3
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="/4"
    >
      <Button
        status="normal"
      >
        4
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="/5"
    >
      <Button
        status="normal"
      >
        5
      </Button>
    </Link>
  </div>
</div>
`;

exports[`<Loader /> rendering render at page 3 correctly 1`] = `
<div
  className="pagination"
>
  Page:
  <div
    className="pagination-item"
  >
    <Link
      to="/1"
    >
      <Button
        status="normal"
      >
        1
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="/2"
    >
      <Button
        status="normal"
      >
        2
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="/3"
    >
      <Button
        status="disabled"
      >
        3
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="/4"
    >
      <Button
        status="normal"
      >
        4
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="/5"
    >
      <Button
        status="normal"
      >
        5
      </Button>
    </Link>
  </div>
</div>
`;

exports[`<Loader /> rendering render at page 4 correctly 1`] = `
<div
  className="pagination"
>
  Page:
  <div
    className="pagination-item"
  >
    <Link
      to="/1"
    >
      <Button
        status="normal"
      >
        1
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <div
      className="pagination-item__placeholder"
    >
       ... 
    </div>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="3"
    >
      <Button>
        3
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="4"
    >
      <Button
        status="disabled"
      >
        4
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="5"
    >
      <Button>
        5
      </Button>
    </Link>
  </div>
</div>
`;

exports[`<Loader /> rendering render at page 5 correctly 1`] = `
<div
  className="pagination"
>
  Page:
  <div
    className="pagination-item"
  >
    <Link
      to="/1"
    >
      <Button
        status="normal"
      >
        1
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <div
      className="pagination-item__placeholder"
    >
       ... 
    </div>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="4"
    >
      <Button>
        4
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="5"
    >
      <Button
        status="disabled"
      >
        5
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="6"
    >
      <Button>
        6
      </Button>
    </Link>
  </div>
</div>
`;

exports[`<Loader /> rendering render at page 200 correctly 1`] = `
<div
  className="pagination"
>
  Page:
  <div
    className="pagination-item"
  >
    <Link
      to="/1"
    >
      <Button
        status="normal"
      >
        1
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <div
      className="pagination-item__placeholder"
    >
       ... 
    </div>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="199"
    >
      <Button>
        199
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="200"
    >
      <Button
        status="disabled"
      >
        200
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="201"
    >
      <Button>
        201
      </Button>
    </Link>
  </div>
</div>
`;

exports[`<Loader /> rendering renders correctly 1`] = `
<div
  className="pagination"
>
  Page:
  <div
    className="pagination-item"
  >
    <Link
      to="/1"
    >
      <Button
        status="normal"
      >
        1
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="/2"
    >
      <Button
        status="normal"
      >
        2
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="/3"
    >
      <Button
        status="normal"
      >
        3
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="/4"
    >
      <Button
        status="normal"
      >
        4
      </Button>
    </Link>
  </div>
  <div
    className="pagination-item"
  >
    <Link
      to="/5"
    >
      <Button
        status="normal"
      >
        5
      </Button>
    </Link>
  </div>
</div>
`;
